--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -364,12 +364,19 @@ config USB_CONFIGFS_F_FS
 
 config USB_G_ANDROID
 	boolean "Android Composite Gadget"
+	select USB_LIBCOMPOSITE
 	help
 	  The Android Composite Gadget supports multiple USB
 	  functions: adb, acm, mass storage, mtp, accessory
 	  and rndis.
 	  Each function can be configured and enabled/disabled
 	  dynamically from userspace through a sysfs interface.
+
+config USB_ANDROID_RNDIS_DWORD_ALIGNED
+	boolean "Use double word aligned"
+	depends on USB_G_ANDROID
+	help
+		Provides dword aligned for DMA controller.
 
 source "drivers/usb/gadget/legacy/Kconfig"
 
