ARM: dts: msm: Do not vote for vmem_maxi_clk during venus pil on msm8996
HLOS does not need to put a proxy vote on the vmem_maxi_clk
during the PIL sequence for venus on msm8996. Remove doing so.

Change-Id: I85bf25bcb5102b394cb927c2c150c8f15b279515
Signed-off-by: Deepak Katragadda <dkatraga@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996.dtsi
@@ -2130,12 +2130,11 @@
 		clocks = <&clock_mmss clk_video_core_clk>,
 			<&clock_mmss clk_video_ahb_clk>,
 			<&clock_mmss clk_video_axi_clk>,
-			<&clock_mmss clk_video_maxi_clk>,
-			<&clock_mmss clk_vmem_maxi_clk>;
+			<&clock_mmss clk_video_maxi_clk>;
 		clock-names = "core_clk", "iface_clk",
-				"bus_clk", "maxi_clk", "vmem_maxi";
+				"bus_clk", "maxi_clk";
 		qcom,proxy-clock-names = "core_clk", "iface_clk",
-				"bus_clk", "maxi_clk", "vmem_maxi";
+				"bus_clk", "maxi_clk";
 
 		qcom,msm-bus,name = "pil-venus";
 		qcom,msm-bus,num-cases = <2>;
