ARM: dts: msm: add touch device node for msm8996 DTP
Add Synaptics touch controller device node for MSM8996 DTP.
Touch controller is connected to the host processor via I2C.

Change-Id: Idcb1f5ed6f7a4ba8d540db377d918046092164be
Signed-off-by: Mao Li <maol@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8996-dtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-dtp.dtsi
@@ -78,3 +78,25 @@
 &sdhc_2 {
 	status = "disabled";
 };
+
+&soc {
+	i2c@75ba000 {
+		synaptics@20 {
+			compatible = "synaptics,dsx";
+			reg = <0x20>;
+			interrupt-parent = <&tlmm>;
+			interrupts = <125 0x2008>;
+			vdd-supply = <&pm8994_l14>;
+			avdd-supply = <&pm8994_l22>;
+			pinctrl-names = "pmx_ts_active", "pmx_ts_suspend";
+			pinctrl-0 = <&ts_active>;
+			pinctrl-1 = <&ts_suspend>;
+			synaptics,display-coords = <0 0 1439 2559>;
+			synaptics,panel-coords = <0 0 1439 2559>;
+			synaptics,reset-gpio = <&tlmm 89 0x00>;
+			synaptics,irq-gpio = <&tlmm 125 0x2008>;
+			synaptics,disable-gpios;
+			synaptics,button-map = <102 139 158>;
+		};
+	};
+};
