--- a/arch/arm/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996.dtsi
@@ -3574,7 +3574,7 @@
 &gdsc_mmagic_video {
 	clock-names = "core_root_clk";
 	/* RPM enables the mmagic bimc GDSC when this clk node is voted for. */
-	clocks = <&clock_gcc clk_mmssnoc_axi_clk>;
+	clocks = <&clock_gcc clk_mmssnoc_gds_clk>;
 	qcom,enable-root-clk;
 	status = "ok";
 };
@@ -3582,7 +3582,7 @@
 &gdsc_mmagic_mdss {
 	clock-names = "core_root_clk";
 	/* RPM enables the mmagic bimc GDSC when this clk node is voted for. */
-	clocks = <&clock_gcc clk_mmssnoc_axi_clk>;
+	clocks = <&clock_gcc clk_mmssnoc_gds_clk>;
 	qcom,enable-root-clk;
 	status = "ok";
 };
@@ -3590,7 +3590,7 @@
 &gdsc_mmagic_camss {
 	clock-names = "core_root_clk";
 	/* RPM enables the mmagic bimc GDSC when this clk node is voted for. */
-	clocks = <&clock_gcc clk_mmssnoc_axi_clk>;
+	clocks = <&clock_gcc clk_mmssnoc_gds_clk>;
 	qcom,enable-root-clk;
 	status = "ok";
 };
