ARM: dts: msm: Add Cx voting during low temperature on MDM9640
Update Mx retention voting to vote to both Mx and Cx
rails. Use level based regulator and vote
RPM_SMD_REGULATOR_LEVEL_RETENTION_PLUS at low temperature.

CRs-fixed: 883004
Change-Id: I56dbf810f61253f52a063fb6cd774e0fb1b01932
Signed-off-by: Shiju Mathew <shijum@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/mdm9640.dtsi
+++ b/arch/arm/boot/dts/qcom/mdm9640.dtsi
@@ -504,6 +504,9 @@
 		qcom,mx-restriction-temp-hysteresis = <5>;
 		qcom,mx-retention-min = <3>;
 		vdd-mx-supply = <&pmd9635_l9_level>;
+		qcom,cx-retention-min =
+			<RPM_SMD_REGULATOR_LEVEL_RETENTION_PLUS>;
+		vdd-cx-supply = <&pmd9635_s5_level>;
 		qcom,vdd-restriction-temp = <5>;
 		qcom,vdd-restriction-temp-hysteresis = <10>;
 		vdd-dig-supply = <&pmd9635_s5_floor_level>;
