ARM: dts: msm: align all cma regions to 4MB
All cma regions must be 4MB aligned, add this
explicitly to all cma nodes in msm8952,
mdmfermium, msmthorium and msmtitanium targets.

Change-Id: I6f6fdb586fb3717b72b9ca5f321abee947801985
Signed-off-by: Shiraz Hashim <shashim@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/mdmfermium.dtsi
+++ b/arch/arm/boot/dts/qcom/mdmfermium.dtsi
@@ -42,6 +42,7 @@
 		audio_mem: audio_region@0 {
 			compatible = "shared-dma-pool";
 			reusable;
+			alignment = <0 0x400000>;
 			size = <0x400000>;
 		};
 	};
