--- a/arch/arm/boot/dts/qcom/msmthorium.dtsi
+++ b/arch/arm/boot/dts/qcom/msmthorium.dtsi
@@ -47,18 +47,21 @@
 			compatible = "shared-dma-pool";
 			reusable;
 			alloc-ranges = <0x0 0x80000000 0x0 0x10000000>;
+			alignment = <0 0x400000>;
 			size = <0 0x0800000>;
 		};
 
 		secure_mem: secure_region@0 {
 			compatible = "shared-dma-pool";
 			reusable;
+			alignment = <0 0x400000>;
 			size = <0 0x7000000>;
 		};
 
 		qseecom_mem: qseecom_region@0 {
 			compatible = "shared-dma-pool";
 			reusable;
+			alignment = <0 0x400000>;
 			size = <0 0x1000000>;
 		};
 	};
