ARM: dts: msm: vote for MBG when PMI8994 5V boost is enabled on MSM8996
There is a requirement to vote for the PMI8994 master band gap
(MBG) to operate in normal power mode when the PMI8994 5V boost
supply is enabled on MSM8996. Without this vote, the MBG can
enter low power mode during PMIC sleep (i.e. XO shutdown). This
causes problems.

Add pon_perph_reg which votes for MBG sleep mode as a parent
supply of pmi8994_boost_5v and pmi8994_boost_pin_ctrl to ensure
that the MBG is always in normal power mode when the 5V boost is
enabled.

CRs-Fixed: 840571
Change-Id: I9c3360e4df722cb5e1244c909ef06ebe4890d70f
Signed-off-by: Subbaraman Narayanamurthy <subbaram@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8996-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-regulator.dtsi
@@ -456,6 +456,7 @@
 			 * control boost regulator request.
 			 */
 			regulator-name = "pmi8994_boost_5v";
+			parent-supply = <&pon_perph_reg>;
 			status = "okay";
 		};
 		pmi8994_boost_pin_ctrl: regulator-bst-pin-ctrl {
@@ -468,6 +469,7 @@
 			 */
 			compatible = "qcom,rpm-smd-regulator";
 			regulator-name = "pmi8994_boost_pin_ctrl";
+			parent-supply = <&pon_perph_reg>;
 			qcom,set = <3>;
 			qcom,enable-with-pin-ctrl = <0 1>;
 		};
