--- a/arch/arm/boot/dts/qcom/msm8996-camera.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-camera.dtsi
@@ -256,18 +256,22 @@
 			"vfe0_clk_src", "camss_vfe_vfe0_clk", "camss_csi_vfe0_clk",
 			"vfe1_clk_src", "camss_vfe_vfe1_clk", "camss_csi_vfe1_clk";
 		qcom,clock-rates = <0 0 0 0
-			200000000 0 0 0
-			200000000 0 0 0
-			200000000 0 0 0
-			200000000 0 0 0
+			0 0 0 0
+			0 0 0 0
+			0 0 0 0
+			0 0 0 0
 			0 0 0
 			0 0 0>;
 		qcom,clock-control = "NO_SET_RATE", "NO_SET_RATE",
 			"NO_SET_RATE", "NO_SET_RATE",
-			"SET_RATE", "NO_SET_RATE", "NO_SET_RATE", "NO_SET_RATE",
-			"SET_RATE", "NO_SET_RATE", "NO_SET_RATE", "NO_SET_RATE",
-			"SET_RATE", "NO_SET_RATE", "NO_SET_RATE", "NO_SET_RATE",
-			"SET_RATE", "NO_SET_RATE", "NO_SET_RATE", "NO_SET_RATE",
+			"INIT_RATE",
+			"NO_SET_RATE", "NO_SET_RATE", "NO_SET_RATE",
+			"INIT_RATE",
+			"NO_SET_RATE", "NO_SET_RATE", "NO_SET_RATE",
+			"INIT_RATE",
+			"NO_SET_RATE", "NO_SET_RATE", "NO_SET_RATE",
+			"INIT_RATE",
+			"NO_SET_RATE", "NO_SET_RATE", "NO_SET_RATE",
 			"INIT_RATE", "NO_SET_RATE", "NO_SET_RATE",
 			"INIT_RATE", "NO_SET_RATE", "NO_SET_RATE";
 		status = "ok";
