--- a/arch/arm/configs/msm8937_defconfig
+++ b/arch/arm/configs/msm8937_defconfig
@@ -39,6 +39,7 @@ CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8916=y
 CONFIG_ARCH_MSM8937=y
 CONFIG_ARCH_MSM8917=y
+CONFIG_ARCH_MSM8940=y
 CONFIG_ARCH_MSM8953=y
 CONFIG_ARM_KERNMEM_PERMS=y
 CONFIG_SMP=y
@@ -324,6 +325,7 @@ CONFIG_SPI_SPIDEV=m
 CONFIG_PINCTRL_MSM8952=y
 CONFIG_PINCTRL_MSM8937=y
 CONFIG_PINCTRL_MSM8917=y
+CONFIG_PINCTRL_MSM8940=y
 CONFIG_PINCTRL_MSM8953=y
 CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
