--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -258,6 +258,13 @@ config ARCH_MSM8917
 	  This enables support for the MSM8917 chipset. If you don't
 	  know what to do here, say N
 
+config ARCH_MSM8940
+	bool "Enable Support for Qualcomm Technologies Inc MSM8940"
+	depends on ARCH_MSM
+	help
+	  This enables support for the MSM8940 chipset. If you don't
+	  know what to do here, say N
+
 config ARCH_MSM8953
 	bool "Enable Support for Qualcomm Technologies Inc MSM8953"
 	depends on ARCH_MSM
