--- a/arch/arm64/configs/msm8937-perf_defconfig
+++ b/arch/arm64/configs/msm8937-perf_defconfig
@@ -36,6 +36,7 @@ CONFIG_PARTITION_ADVANCED=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8916=y
 CONFIG_ARCH_MSM8917=y
+CONFIG_ARCH_MSM8940=y
 CONFIG_ARCH_MSM8953=y
 CONFIG_ARCH_MSM8937=y
 CONFIG_ARCH_MSMCOBALT=y
@@ -322,6 +323,7 @@ CONFIG_PINCTRL_MSM8952=y
 CONFIG_PINCTRL_MSM8937=y
 CONFIG_PINCTRL_MSMCOBALT=y
 CONFIG_PINCTRL_MSM8917=y
+CONFIG_PINCTRL_MSM8940=y
 CONFIG_PINCTRL_MSM8953=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
