--- a/arch/arm/boot/dts/qcom/mdmcalifornium.dtsi
+++ b/arch/arm/boot/dts/qcom/mdmcalifornium.dtsi
@@ -1048,7 +1048,11 @@
 				"msm-dai-q6-auxpcm.2";
 		asoc-codec = <&stub_codec>;
 		asoc-codec-names = "msm-stub-codec.1";
-		qcom,aux-codec = <&stub_codec>;
+		qcom,wsa-max-devs = <1>;
+		qcom,wsa-devs = <&wsa881x_211>, <&wsa881x_212>,
+				<&wsa881x_213>, <&wsa881x_214>;
+		qcom,wsa-aux-dev-prefix = "SpkrLeft", "SpkrRight",
+					  "SpkrLeft", "SpkrRight";
 	};
 
 	qcom,msm-adsp-loader {
