soc: qcom: msm_power: add msm_power driver
Add driver to monitor system resources and take actions to
balance power and performance. Currently, the driver manages
system resources within the kernel but it can also be used
to notify userspace of kernel-managed system resource changes.

The driver currently monitors the frequency of all CPUs and
the GPU and limits the DDR frequency when both resources are
running below tunable thresholds.

Change-Id: Id1b446e4b3490c04b582a279496743d8c265df70
Signed-off-by: Amir Vajid <avajid@codeaurora.org>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -741,6 +741,14 @@ config MSM_PERFORMANCE_HOTPLUG_ON
 	  compile out the nodes needed for core-control functionality through
 	  msm_performance.
 
+config MSM_POWER
+	tristate "Power driver to manage system resources"
+	help
+	  This driver monitors and manages system resources for better
+	  power efficiency. It keeps track of the current frequency of
+	  several resources (e.g. CPU and GPU) to manage other system
+	  resources (e.g. DDR frequency) more efficiently.
+
 config MSM_SERVICE_LOCATOR
 	bool "Service Locator"
 	depends on MSM_QMI_INTERFACE
