--- a/arch/arm/boot/dts/qcom/mdm9640.dtsi
+++ b/arch/arm/boot/dts/qcom/mdm9640.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2014-2015, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2014-2016, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -595,6 +595,8 @@
 		      <0x07984000 0x1a000>;
 		reg-names = "nand_phys",
 			    "bam_phys";
+		qcom,reg-adjustment-offset = <0>;
+
 		interrupts = <0 247 0>;
 		interrupt-names = "bam_irq";
 
