ARM: dts: msm: Update USB QMP PHY register address size on mdmcalifornium
Currently used USB QMP PHY register address space size is 0x45c which is
used by Linux USB QMP PHY driver to memory mapped the region. Some of
QMP PHY registers' read/write offset is above this size. Hence increase
USB QMP PHY register address space size to 0x9f8 to memory map complete
USB QMP PHY related register address space.

CRs-Fixed: 992231
Change-Id: Ib3fbaa3f88588c979da1772633eb55c9c6294c64
Signed-off-by: Mayank Rana <mrana@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/mdmcalifornium-usb.dtsi
+++ b/arch/arm/boot/dts/qcom/mdmcalifornium-usb.dtsi
@@ -149,7 +149,7 @@
 
 	ssphy: ssphy@78000 {
 		compatible = "qcom,usb-ssphy-qmp";
-		reg = <0x00078000 0x45c>,
+		reg = <0x00078000 0x9f8>,
 		      <0x01947244 0x4>,
 		      <0x01956044 0x4>;
 		reg-names = "qmp_phy_base",
