ARM: dts: msm: Enable all OSM FSMs for msmcobalt
Enable the pulse swallower, droop, WFx, and power-collapse
FSMs to enable all features of the OSM hardware.

Signed-off-by: Osvaldo Banuelos <osvaldob@codeaurora.org>
CRs-Fixed: 992982
Change-Id: I69fa6fd84c1e89bb6b698b865dcb9ce1bfc35e98

--- a/arch/arm/boot/dts/qcom/msmcobalt.dtsi
+++ b/arch/arm/boot/dts/qcom/msmcobalt.dtsi
@@ -728,6 +728,10 @@
 		qcom,red-fsm-en;
 		qcom,boost-fsm-en;
 		qcom,safe-fsm-en;
+		qcom,ps-fsm-en;
+		qcom,droop-fsm-en;
+		qcom,wfx-fsm-en;
+		qcom,pc-fsm-en;
 
 		qcom,pwrcl-apcs-mem-acc-cfg =
 			<0x179d1360 0x179d1364 0x179d1364>;
