--- a/arch/arm/boot/dts/qcom/msm8953.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953.dtsi
@@ -2141,7 +2141,7 @@
 
 	ssphy: ssphy@78000 {
 		compatible = "qcom,usb-ssphy-qmp";
-		reg = <0x78000 0x45c>,
+		reg = <0x78000 0x9f8>,
 		      <0x0193f244 0x4>,
 		      <0x0193f044 0x4>;
 		reg-names = "qmp_phy_base",
