ARM: dts: msm: Advertise SG support by rmnet_ipa on msmcobalt
This is needed to enable segmentation pkt offload on IPA-HW
which is called GSO (Generic Segmentation Offload).

Change-Id: If43428f0eb53370ca725480b3cd13e7b53e643c3
Signed-off-by: Skylar Chang <chiaweic@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msmcobalt.dtsi
+++ b/arch/arm/boot/dts/qcom/msmcobalt.dtsi
@@ -808,6 +808,7 @@
 		compatible = "qcom,rmnet-ipa3";
 		qcom,rmnet-ipa-ssr;
 		qcom,ipa-loaduC;
+		qcom,ipa-advertise-sg-support;
 	};
 
 	ipa_hw: qcom,ipa@01e00000 {
