msm: emac: Add runtime PM support to EMAC core
Added Runtime PM framework to EMAC core. This framework
manages the common resources (clock/gpio/regulator) for
EMAC core at runtime based on Ethernet Link connection status.

This framework turns on all the resources when Ethernet Link
is up and vice-versa.

Change-Id: I8a2668ae8beca614bb8411efb4ca6c3d8a36f79c
Signed-off-by: Alok Chauhan <alokc@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/mdm9607.dtsi
+++ b/arch/arm/boot/dts/qcom/mdm9607.dtsi
@@ -1395,6 +1395,7 @@
 		emac_vreg3-supply = <&mdm9607_l5>;
 		emac_vreg4-supply = <&mdm9607_l11>;
 		emac_vreg5-supply = <&emac_lan_vreg>;
+		qcom,vdd-voltage-level = <1250000 1800000 2850000 1800000 0>;
 		clocks = <&clock_gcc clk_gcc_emac_0_axi_clk>,
 			 <&clock_gcc clk_gcc_emac_0_ahb_clk>,
 			 <&clock_gcc clk_gcc_emac_0_125m_clk>,
