ARM: dts: mdm: Add hardware specific dts files for MDM9640
Add hardware (mdm9640-v1 and mdm9640-v2) specific device tree
entries for mdm9640 mtp board. Add make rules too.

Change-Id: Icbe3f483808139a21350a0e6f3018c7cda7890df
Signed-off-by: Binoy Jayan <bjayan@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -119,7 +119,12 @@ dtb-$(CONFIG_ARCH_MDM9640) += mdm9640-sim.dtb \
 	mdm9640-rumi.dtb \
 	mdm9640-emmc-cdp.dtb \
 	mdm9640-nand-cdp.dtb \
-	mdm9640-mtp.dtb
+	mdm9640-mtp.dtb \
+	mdm9640-v1-mtp.dtb \
+	mdm9640-v1-pmk8001-mtp.dtb \
+	mdm9640-v2-mtp.dtb \
+	mdm9640-v2-pmk8001-mtp.dtb \
+
 
 dtb-$(CONFIG_ARCH_MDMCALIFORNIUM) += mdmcalifornium-sim.dtb \
 	mdmcalifornium-rumi.dtb \
