ARM: dts: msm: Increase rmtfs buffer size in 8940
The rmtfs buffer size requested by modem has been changed
1.5MB in 8940.
This results in a mismatch of requested buffer size
and allowable buffer size, thus causing an error and a
modem crash.

CRs-fixed: 1017343
Change-Id: I44a127abc216a9ee6fdd8c734d988247d75766cb
Signed-off-by: Asutosh Das <asutoshd@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8940.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8940.dtsi
@@ -140,6 +140,10 @@
 		qcom,ipa-advertise-sg-support;
 	};
 
+	qcom,rmtfs_sharedmem@00000000 {
+		reg = <0x00000000 0x00180000>;
+	};
+
 	/* remove 8937 MEM ACC node */
 	/delete-node/ regulator@01946004;
 
