ARM: dts: msm: Disable sleep configuration of cd gpio on 8909w SWOC
Disable card detect gpio sleep config on 8909w SWOC Platform.

This platform doesn't support SD card and no pull up is present
on card-detect gpio (this gpio is left floating). When sleep
configuration is applied on this gpio, its triggering a spurious
interrupt. For fixing this, remove sleep configuration of cd
gpio on 8909w SWOC platform.

Change-Id: Ib9e37ed84f1508dfbfd258351056c0de2b7d78a0
Signed-off-by: Veerabhadrarao Badiganti <vbadigan@codeaurora.org>
Signed-off-by: Asutosh Das <asutoshd@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8909w-swoctp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8909w-swoctp.dtsi
@@ -165,3 +165,9 @@
 		qcom,fg-adc_tm = <&pm8916_adc_tm>;
 	};
 };
+
+&sdhc_2 {
+	pinctrl-names = "active", "sleep";
+	pinctrl-0 = <&sdc2_clk_on &sdc2_cmd_on &sdc2_data_on &sdc2_cd_on>;
+	pinctrl-1 = <&sdc2_clk_off &sdc2_cmd_off &sdc2_data_off>;
+};
