--- a/arch/arm/boot/dts/qcom/msm8996-auto-cdp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-auto-cdp.dtsi
@@ -972,10 +972,19 @@
 	/delete-property/ vin-supply;
 };
 
+&pcie0 {
+	/delete-property/ qcom,l1-supported;
+	/delete-property/ qcom,l1ss-supported;
+	/delete-property/ qcom,aux-clk-sync;
+};
+
 &pcie1 {
 	qcom,msi-gicm-addr = <0x09BD0040>;
 	qcom,msi-gicm-base = <0x240>;
 
+	/delete-property/ qcom,l1-supported;
+	/delete-property/ qcom,l1ss-supported;
+	/delete-property/ qcom,aux-clk-sync;
 	/delete-property/ qcom,ep-wakeirq;
 };
 
@@ -983,6 +992,9 @@
 	perst-gpio = <&tlmm 90 0>;
 	wake-gpio = <&tlmm 54 0>;
 
+	/delete-property/ qcom,l1-supported;
+	/delete-property/ qcom,l1ss-supported;
+	/delete-property/ qcom,aux-clk-sync;
 	/delete-property/ qcom,ep-wakeirq;
 };
 
