--- a/arch/arm/boot/dts/qcom/mdmcalifornium-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/mdmcalifornium-mtp.dtsi
@@ -38,6 +38,7 @@
 		pinctrl-names = "default";
 		pinctrl-0 = <&smb_stat_active>;
 		qcom,id-line-not-connected;
+		qcom,switch-freq = <2>;
 	};
 };
 
