ARM: dts: msm: add fix to set I2S default mode as master for mdmcalifornium
Add fix to set the default I2S mode as master.
The default should be master mode as I2S clocks
are provided by the internal chip.

CRs-Fixed: 1019836
Change-Id: I24e45c5da3db8531d4a14fdcd0bf3b7e7425ed42
Signed-off-by: Josh Kirsch <jkirsch@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/mdmcalifornium.dtsi
+++ b/arch/arm/boot/dts/qcom/mdmcalifornium.dtsi
@@ -1014,8 +1014,8 @@
 			"SpkrRight IN", "SPK2 OUT";
 
 		qcom,tasha-mclk-clk-freq = <12288000>;
-		qcom,mi2s-interface-mode = "pri_mi2s_slave", "sec_mi2s_slave";
-		qcom,auxpcm-interface-mode = "pri_pcm_slave", "sec_pcm_slave";
+		qcom,mi2s-interface-mode = "pri_mi2s_master", "sec_mi2s_master";
+		qcom,auxpcm-interface-mode = "pri_pcm_master", "sec_pcm_master";
 		asoc-platform = <&pcm0>, <&pcm1>, <&voip>, <&voice>,
 				<&loopback>, <&hostless>, <&afe>, <&routing>,
 				<&pcm_dtmf>, <&host_pcm>;
